--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,8 @@ inputs:
     required: true
     default: 'package'
 runs:
-  name: 'install esy'
   using: 'node12'
-  main: npm install -g esy
+  main: |
+    npm install -g esy
+    esy "@${{ sandbox }}" install
+    esy "@${{ sandbox }}" build-dependencies
